--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-slate
-title: Homework Space 
+title: Robin Wong's Homework Space
 description: Homework Space for Introduction to Software Engineering
